# stenographer

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
stenographer/: bot.py  cli.py
