[tool.poetry]
name = "stenographer"
version = "0.1.0"
description = ""
authors = ["bitjockey <bitjockey@jackpoint.network>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.scripts]
stenographer = "stenographer.cli:cli"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
